--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Alexander nicht Juergens</h1>
-    <img id="alexImage" src="/static/normal_alex.png" alt="Alexander Image">
+    <h1>Alexander NICHT Jürgen</h1>
+    <img id="alexImage" src="static/normal_alex.png" alt="Alexander Image">
     <h2>Counter: <span id="counter">0</span></h2>
     <button type="button" onclick="flipImage()" id="incrementButton">Ich nannte Alexander Jürgen</button>
   </div>
@@ -65,7 +65,7 @@
       counter++;
 
       // Change the image source after the button click
-      image.src = '/static/angry_alex.png';
+      image.src = 'static/angry_alex.png';
 
       // Update the counter value on the page
       counterSpan.innerText = counter;
