--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
   <div class="container">
     <h1>Alexander NICHT Juergen</h1>
-    <img id="alexImage" src="/static/normal_alex.png" alt="Alexander Image">
+    <img id="alexImage" src="static/normal_alex.png" alt="Alexander Image">
     <h2>Counter: <span id="counter">0</span></h2>
     <button type="button" onclick="flipImage()" id="incrementButton"><b>Ich nannte Alexander Jürgen</b></button>
   </div>
@@ -87,7 +87,7 @@
 
       // Change the image source after the fade-out is complete
       setTimeout(function () {
-        image.src = '/static/angry_alex.png';
+        image.src = 'static/angry_alex.png';
 
         // Remove the 'hidden' class to start the fade-in transition
         setTimeout(function () {
