--- a/index.html
+++ b/index.html
@@ -1,104 +1,126 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Aleander Nicht Jürgen</title>
-  <style>
-    .container {
-      text-align: center;
-      margin-top: 50px;
-    }
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aleander Nicht Jürgen</title>
+    <style>
+        .container {
+            text-align: center;
+            margin-top: 50px;
+        }
 
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
 
-    h1 {
-      font-size: 36px;
-      color: #333;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-      background-color: #fd0;
-      padding: 10px;
-      letter-spacing: 2px;
-    }
+        h1 {
+            font-size: 36px;
+            color: #333;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+            background-color: #fd0;
+            padding: 10px;
+            letter-spacing: 2px;
+        }
 
-    img {
-      width: 300px;
-      transition: opacity 1s ease-in-out;
-    }
+        img {
+            width: 300px;
+            transition: opacity 1s ease-in-out;
+        }
 
-    .hidden {
-      opacity: 0;
-    }
+        .hidden {
+            opacity: 0;
+        }
 
-    #incrementButton {
-      display: inline-block;
-      outline: 0;
-      border: none;
-      cursor: pointer;
-      padding: 0 24px;
-      border-radius: 50px;
-      min-width: 200px;
-      height: 50px;
-      font-size: 18px;
-      font-weight: bold;
-      background-color: #fd0;
-      font-weight: 500;
-      color: #222;
-      transition: background-color 0.3s ease-in-out;
-    }
+        #incrementButton {
+            display: inline-block;
+            outline: 0;
+            border: none;
+            cursor: pointer;
+            padding: 0 24px;
+            border-radius: 50px;
+            min-width: 200px;
+            height: 50px;
+            font-size: 18px;
+            font-weight: bold;
+            background-color: #fd0;
+            font-weight: 500;
+            color: #222;
+            transition: background-color 0.3s ease-in-out;
+        }
 
-    #incrementButton:disabled {
-      background-color: #ccc;
-      cursor: not-allowed;
-    }
-  </style>
+        #incrementButton:disabled {
+            background-color: #ccc;
+            cursor: not-allowed;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Alexander NICHT Juergen</h1>
-    <img id="alexImage" src="static/normal_alex.png" alt="Alexander Image">
-    <h2>Counter: <span id="counter">0</span></h2>
-    <button type="button" onclick="flipImage()" id="incrementButton"><b>Ich nannte Alexander Jürgen</b></button>
-  </div>
+    <div class="container">
+        <h1>Alexander NICHT Juergen</h1>
+        <img id="alexImage" src="static/normal_alex.png" alt="Alexander Image">
+        <h2>Counter: <span id="counter">0</span></h2>
+        <button type="button" onclick="flipImage()" id="incrementButton"><b>Ich nannte Alexander Jürgen</b></button>
+    </div>
 
-  <script>
-    var isTransitioning = false;
+    <script>
+        var isTransitioning = false;
 
-    function flipImage() {
-      if (isTransitioning) {
-        return; // If already transitioning, do nothing
-      }
+        function flipImage() {
+            if (isTransitioning) {
+                return; // If already transitioning, do nothing
+            }
 
-      var image = document.getElementById('alexImage');
-      var counterSpan = document.getElementById('counter');
-      var incrementButton = document.getElementById('incrementButton');
+            var image = document.getElementById('alexImage');
+            var counterSpan = document.getElementById('counter');
+            var incrementButton = document.getElementById('incrementButton');
 
-      // Add the 'hidden' class to start the fade-out transition
-      image.classList.add('hidden');
-      isTransitioning = true;
+            // Add the 'hidden' class to start the fade-out transition
+            image.classList.add('hidden');
+            isTransitioning = true;
 
-      // Disable the button during transitions
-      incrementButton.disabled = true;
+            // Disable the button during transitions
+            incrementButton.disabled = true;
 
-      // Simulate the counter increment
-      counterSpan.innerText = parseInt(counterSpan.innerText) + 1;
+            // Simulate a server request delay with setTimeout
+            setTimeout(function () {
+                // Update the counter value on the page
+                counterSpan.innerText = parseInt(counterSpan.innerText) + 1;
 
-      // Change the image source after the fade-out is complete
-      setTimeout(function () {
-        image.src = 'static/angry_alex.png';
+                // Change the image source after the fade-out is complete
+                setTimeout(function () {
+                    image.src = 'static/angry_alex.png';
 
-        // Remove the 'hidden' class to start the fade-in transition
-        setTimeout(function () {
-          image.classList.remove('hidden');
+                    // Remove the 'hidden' class to start the fade-in transition
+                    setTimeout(function () {
+                        image.classList.remove('hidden');
+                    }, 50); // A small delay to ensure smooth transition
 
-          // Enable the button after the transition is complete
-          incrementButton.disabled = false;
-          isTransitioning = false;
-        }, 50); // A small delay to ensure smooth transition
-      }, 1000); // Adjust the timeout to match the transition duration
-    }
-  </script>
+                    // Revert back to the original image after 5 seconds with the same animation
+                    setTimeout(function () {
+                        // Add the 'hidden' class to start the fade-out transition
+                        image.classList.add('hidden');
+
+                        // Change the image source after the fade-out is complete
+                        setTimeout(function () {
+                            image.src = 'static/normal_alex.png';
+
+                            // Remove the 'hidden' class to start the fade-in transition
+                            setTimeout(function () {
+                                image.classList.remove('hidden');
+
+                                // Enable the button after the transition back is complete
+                                incrementButton.disabled = false;
+                                isTransitioning = false;
+                            }, 50); // A small delay to ensure smooth transition
+                        }, 1000); // Adjust the timeout to match the transition duration
+                    }, 5000);
+                }, 1000); // Adjust the timeout to match the transition duration
+            }, 2000); // Simulate server request delay
+        }
+    </script>
 </body>
 </html>
