--- a/index.html
+++ b/index.html
@@ -1,165 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aleander Nicht Jürgen</title>
     <style>
-        .container {
-            text-align: center;
-            margin-top: 50px;
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        h1 {
-            font-size: 36px;
-            color: #333;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-            background-color: #fd0;
-            padding: 10px;
-            letter-spacing: 2px;
-        }
-
-        img {
-            width: 300px;
-            transition: opacity 1s ease-in-out;
-        }
-
-        .hidden {
-            opacity: 0;
-        }
-
-        #incrementButton {
-            display: inline-block;
-            outline: 0;
-            border: none;
-            cursor: pointer;
-            padding: 0 24px;
-            border-radius: 50px;
-            min-width: 200px;
-            height: 50px;
-            font-size: 18px;
-            font-weight: bold;
-            background-color: #fd0;
-            font-weight: 500;
-            color: #222;
-            transition: background-color 0.3s ease-in-out;
-        }
-
-        #incrementButton:disabled {
-            background-color: #ccc;
-            cursor: not-allowed;
-        }
+      .container {
+        text-align: center;
+        margin-top: 50px;
+      }
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+      h1 {
+        font-size: 36px;
+        color: #333;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+        background-color: #fd0;
+        padding: 10px;
+        letter-spacing: 2px;
+      }
+      img {
+        width: 300px;
+        transition: opacity 1s ease-in-out;
+      }
+      .hidden {
+        opacity: 0;
+      }
+      #incrementButton {
+        display: inline-block;
+        outline: 0;
+        border: none;
+        cursor: pointer;
+        padding: 0 24px;
+        border-radius: 50px;
+        min-width: 200px;
+        height: 50px;
+        font-size: 18px;
+        font-weight: bold;
+        background-color: #fd0;
+        font-weight: 500;
+        color: #222;
+        transition: background-color 0.3s ease-in-out;
+      }
+      #incrementButton:disabled {
+        background-color: #ccc;
+        cursor: not-allowed;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <h1>Alexander NICHT Juergen</h1>
-        <img id="alexImage" src="static/normal_alex.png" alt="Alexander Image">
-        <h2>Counter: <span id="counter">0</span></h2>
-        <button type="button" onclick="flipImage()" id="incrementButton"><b>Ich nannte Alexander Jürgen</b></button>
+      <h1>Alexander NICHT Juergen</h1>
+      <img id="alexImage" src="static/normal_alex.png" alt="Alexander Image">
+      <h2>Counter:
+        <span id="counter">0</span>
+      </h2>
+      <button type="button" id="incrementButton">
+        <b>Ich nannte Alexander Jürgen</b>
+      </button>
     </div>
-
-<script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-database.js"></script>
-
-<script>
-    var firebaseConfig = {
-      apiKey: "AIzaSyCrjBZWQZ6GhFKorWHHzgqqq1r0Q0ONyqM",
-      authDomain: "alex-nicht-juergen.firebaseapp.com",
-      projectId: "alex-nicht-juergen",
-      storageBucket: "alex-nicht-juergen.appspot.com",
-      messagingSenderId: "374207046183",
-      appId: "1:374207046183:web:6e35112265148f55972402"
-    };
-    firebase.initializeApp(firebaseConfig);
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-database.js"></script>
+    <script>
+      var firebaseConfig = {
+        apiKey: "AIzaSyCrjBZWQZ6GhFKorWHHzgqqq1r0Q0ONyqM",
+        authDomain: "alex-nicht-juergen.firebaseapp.com",
+        projectId: "alex-nicht-juergen",
+        storageBucket: "alex-nicht-juergen.appspot.com",
+        messagingSenderId: "374207046183",
+        appId: "1:374207046183:web:6e35112265148f55972402",
+        databaseURL: "https://alex-nicht-juergen-default-rtdb.europe-west1.firebasedatabase.app"
+      };
+      firebase.initializeApp(firebaseConfig);
+      // Reference to your Firebase Realtime Database
+      var database = firebase.database();
+    </script>
+      <script>
+        document.addEventListener("DOMContentLoaded", function() {
+          var isTransitioning = false;
+          var image = document.getElementById('alexImage');
+          var counterSpan = document.getElementById('counter');
+          var incrementButton = document.getElementById('incrementButton');
   
-    // Reference to your Firebase Realtime Database
-    var database = firebase.database();
-</script>
-
-<script>
-var isTransitioning = false;
-
-// Function to fetch the counter value from Firebase
-function getCounterValue(callback) {
-    var counterRef = database.ref('counter');
-
-    counterRef.once('value').then(function(snapshot) {
-        var counterValue = snapshot.val() || 0;
-        callback(counterValue);
-    });
-}
-
-// Function to update the counter value in Firebase
-function updateCounterValue(newValue) {
-    var counterRef = database.ref('counter');
-    counterRef.set(newValue);
-}
-
-function flipImage() {
-    if (isTransitioning) {
-        return; // If already transitioning, do nothing
-    }
-
-    var image = document.getElementById('alexImage');
-    var counterSpan = document.getElementById('counter');
-    var incrementButton = document.getElementById('incrementButton');
-
-   // Fetch the current counter value from Firebase
-   getCounterValue(function(currentValue) {
-        // Add the 'hidden' class to start the fade-out transition
-        image.classList.add('hidden');
-        isTransitioning = true;
-
-        // Disable the button during transitions
-        incrementButton.disabled = true;
-
-        // Update the counter value on the page
-        var newCounterValue = currentValue + 1;
-        counterSpan.innerText = newCounterValue;
-
-        // Update the counter value in Firebase
-        updateCounterValue(newCounterValue);
-
-        // Change the image source after the fade-out is complete
-        setTimeout(function () {
-            image.src = 'static/angry_alex.png';
-
-            // Remove the 'hidden' class to start the fade-in transition
-            setTimeout(function () {
-                image.classList.remove('hidden');
-            }, 50); // A small delay to ensure smooth transition
-
-            // Revert back to the original image after 5 seconds with the same animation
-            setTimeout(function () {
-                // Add the 'hidden' class to start the fade-out transition
-                image.classList.add('hidden');
-
-                // Change the image source after the fade-out is complete
+          // Function to fetch the counter value from Firebase
+          function getCounterValue(callback) {
+            var counterRef = database.ref('counter');
+            counterRef.once('value').then(function (snapshot) {
+              var counterValue = snapshot.val() || 0;
+              callback(counterValue);
+            });
+          }
+  
+          // Function to update the counter value in Firebase
+          function updateCounterValue(newValue) {
+            var counterRef = database.ref('counter');
+            counterRef.set(newValue);
+          }
+  
+          function flipImage() {
+            if (isTransitioning) {
+              return; // If already transitioning, do nothing
+            }
+  
+            // Fetch the current counter value from Firebase
+            getCounterValue(function (currentValue) {
+              // Add the 'hidden' class to start the fade-out transition
+              image.classList.add('hidden');
+              isTransitioning = true;
+  
+              // Disable the button during transitions
+              incrementButton.disabled = true;
+  
+              // Update the counter value on the page
+              var newCounterValue = currentValue + 1;
+              counterSpan.innerText = newCounterValue;
+  
+              // Update the counter value in Firebase
+              updateCounterValue(newCounterValue);
+  
+              // Change the image source after the fade-out is complete
+              setTimeout(function () {
+                image.src = 'static/angry_alex.png';
+  
+                // Remove the 'hidden' class to start the fade-in transition
                 setTimeout(function () {
+                  image.classList.remove('hidden');
+                }, 50);
+  
+                // A small delay to ensure smooth transition
+  
+                // Revert back to the original image after 5 seconds with the same animation
+                setTimeout(function () {
+                  // Add the 'hidden' class to start the fade-out transition
+                  image.classList.add('hidden');
+  
+                  // Change the image source after the fade-out is complete
+                  setTimeout(function () {
                     image.src = 'static/normal_alex.png';
-
+  
                     // Remove the 'hidden' class to start the fade-in transition
                     setTimeout(function () {
-                        image.classList.remove('hidden');
-
-                        // Enable the button after the transition back is complete
-                        incrementButton.disabled = false;
-                        isTransitioning = false;
+                      image.classList.remove('hidden');
+  
+                      // Enable the button after the transition back is complete
+                      incrementButton.disabled = false;
+                      isTransitioning = false;
                     }, 50); // A small delay to ensure smooth transition
-                }, 1000); // Adjust the timeout to match the transition duration
-            }, 5000);
-        }, 1000); // Adjust the timeout to match the transition duration
-    });
-}
-</script>
-
-</body>
+                  }, 1000); // Adjust the timeout to match the transition duration
+                }, 5000);
+              }, 1000); // Adjust the timeout to match the transition duration
+            });
+          }
+          incrementButton.addEventListener("click", flipImage);
+          // Fetch the counter value when the page finishes loading
+          getCounterValue(function (currentValue) {
+            counterSpan.innerText = currentValue;
+          });
+        });
+      </script>
+  </body>
 </html>
