--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Alexander NICHT Juergen</h1>
+      <h1>Alexander NICHT Jürgen</h1>
       <img id="alexImage" src="static/normal_alex.png" alt="Alexander Image">
       <h2>Counter:
         <span id="counter">0</span>
